Add IPC to notify BrowserPlugin when RenderProcess is ready.

When a guest renderer crashes, and then is re-created via a navigation,
the BrowserPlugin currently does not get notified, and thus cannot
clear the guest_crashed_ flag. This causes the BrowserPlugin to ignore
incoming input events.

This CL adds an IPC to notify BrowserPlugin when it should clear
guest_crashed_.

BUG=653016

Review-Url: https://codereview.chromium.org/2396123002
Cr-Commit-Position: refs/heads/master@{#423897}

Former-commit-id: f73a79830396614b9429612b286dcf6b1df5a356